[gd_scene load_steps=7 format=2]

[ext_resource path="res://Instr4MIN.gd" type="Script" id=1]
[ext_resource path="res://charge-circle-electric-fast-lightning-power-icon-symbol-number-text-recycling-symbol-transparent-png-1724406.png" type="Texture" id=2]
[ext_resource path="res://sampleset.png" type="Texture" id=3]
[ext_resource path="res://flankSampleimage.png" type="Texture" id=4]
[ext_resource path="res://threeSetShiftSamples.png" type="Texture" id=5]
[ext_resource path="res://threeCIRCS.png" type="Texture" id=6]

[node name="ControlInstr" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_right = 559.0
margin_bottom = 147.0
rect_scale = Vector2( 1.5, 1.5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
margin_left = 4.0
margin_top = 334.0
margin_right = 563.0
margin_bottom = 422.0
rect_scale = Vector2( 1.5, 1.5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 167.569
margin_top = 543.026
margin_right = 367.569
margin_bottom = 573.026
rect_scale = Vector2( 1.5, 1.5 )
text = "START GAME"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
visible = false
position = Vector2( 315.119, 497.569 )
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 2 )

[node name="Sprite3" type="Sprite" parent="."]
visible = false
position = Vector2( 283.621, 282.123 )
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 6 )

[node name="Sprite4" type="Sprite" parent="."]
visible = false
position = Vector2( 283.621, 282.123 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )

[node name="Sprite5" type="Sprite" parent="."]
visible = false
position = Vector2( 283.621, 282.123 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 4 )

[node name="Sprite2" type="Sprite" parent="."]
visible = false
position = Vector2( 283.621, 282.123 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 3 )
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
